Added output of posts and animation of their appearance

--- a/resources/scss/_global.scss
+++ b/resources/scss/_global.scss
@@ -26,11 +26,11 @@ body {
 	flex: 0 0 auto;
 }
 
-.container{
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
+//.container{
+//  max-width: 1140px;
+//  margin: 0 auto;
+//  padding: 0 15px;
+//}
 
 
 
