--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -223,9 +223,10 @@
         text-transform: uppercase;
     }
     &__text {
-        padding-top: 64px;
+        padding-top: 20px;
         font-size: 18px;
-        color: $blue-white;
+        //color: $blue-white;
+        color: white;
         max-width: 539px;
         & a {
             color: $accent;
@@ -402,7 +403,7 @@
     &__social {
         width: 200px;
         margin-right: auto;
-        margin-left: 100px;
+        margin-left: 180px;
     }
     &__social-title {
         color: $title;
@@ -445,9 +446,35 @@
         background-image: url(../images/social/viber-httpsicons8.ruiconssetviber.svg);
         background-size: contain;
     }
-
-    &__map {
-        padding-left: 30px;
+    &__contacts {
+        width: 200px;
+        margin-right: auto;
+        margin-left: 100px;
+    }
+    &__contacts-title {
+        color: $title;
+        @extend %title-font;
+        margin-bottom: 25px;
+        line-height: 24px;
+        font-size: 16px;
+    }
+    &__contacts-item {
+        margin-bottom: 15px;
+        //padding-left: 28px;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 5px;
+            left: 0;
+            width: 18px;
+            height: 18px;
+        }
+    }
+    &__contacts-link {
+        color: $default;
+        font-weight: 600;
+        font-size: 14px;
     }
 }
 
@@ -522,6 +549,7 @@
         border: 1px solid $default;
     }
     &__title-link {
+        max-width: 500px;
         margin-top: 15px;
         color: $title;
         @extend %title-font;
@@ -713,7 +741,6 @@
         flex-flow: wrap;
     }
     &__card {
-        //margin: 0 5px 10px 5px;
         max-width: 370px;
         background: #e5e5e7;
         padding: 23px;
@@ -758,5 +785,61 @@
     &__preview-title {
         position: relative;
         z-index: 2;
+    }
+}
+
+.popups {
+    &__inner {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        display: none;
+    }
+    &__inner--active {
+        display: flex;
+        z-index: 2;
+    }
+    &__popup {
+        width: 600px;
+        margin: 0 auto;
+        text-align: center;
+        background: $blue-white;
+        padding: 60px 90px;
+        border-radius: 15px;
+        position: relative;
+    }
+    &__close-button {
+        position: absolute;
+        top: 24px;
+        right: 28px;
+        font-size: 36px;
+        cursor: pointer;
+    }
+    &__popup-label {
+        @extend %title-h3
+    }
+    &__popup-description {
+        margin-bottom: 30px;
+    }
+    &__popup-item {
+        margin: 0 auto 15px;
+    }
+    &__popup-item input {
+        border-radius: 10px;
+        padding: 10px 15px;
+        width: 300px;
+        max-width: 100%;
+    }
+    &__popup-item textarea {
+        border-radius: 10px;
+        padding: 10px 15px;
+        width: 300px;
+        max-width: 100%;
+    }
+    &__popup-button {
+        margin-top: 15px;
     }
 }
